--- a/style.css
+++ b/style.css
@@ -1,41 +1,130 @@
-html, body {
-   margin: 0;
-   padding: 0;
-   height: 100%;
-   overflow: hidden;
+* {
+    margin: 0;
+    padding: 0;
+
 }
 
 header {
-   width: 100%;
    min-height: 100%;
-   position: relative;
-   background-color: black;
 }
 
-.stars-container {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   z-index: -1;
-   background-color: black;
+.particles-js-canvas-el {
+   min-height:100vh;
 }
 
-.star {
+.head {
+   display: flex;
+   font-family: 'Play', sans-serif;
    position: absolute;
-   top: 0;
-   left: 0;
-   z-index: 1;
-   border-radius: 50%;
-   transform: translate(-50%, -50%);
+   left: 10px;
+   top: 10px;
 }
 
-.line {
-   position: absolute;
-   top: 0;
-   left: 0;
-   z-index: 0;
-   width: 1px;
-   height: 1px;
+.head {
+   padding: 12px 10px;
+   margin-bottom: 1px;
+   color: #fff;
+}
+
+.head h1 {
+   line-height: 22px;
+   font-weight: 300;
+   font-size: 18px;
+   margin: 0;
+}
+
+
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+    from {background-position: 0;}
+    to {background-position:10000px 0;}
+}
+
+.stars, .twinkle {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  min-height:100%;
+  display:block;
+  z-index: -10;
+}
+
+.stars {
+  background:#000 url(http://sylvaingarnot.fr/media/stars.png) repeat top center;
+  z-index:-1;
+}
+
+.twinkle{
+  background:transparent url(http://sylvaingarnot.fr/media/twinkling.png) repeat top center;
+  z-index:-1;
+
+  -moz-animation:move-twink-back 200s linear infinite;
+  -ms-animation:move-twink-back 200s linear infinite;
+  -o-animation:move-twink-back 200s linear infinite;
+  -webkit-animation:move-twink-back 200s linear infinite;
+  animation:move-twink-back 200s linear infinite;
+}
+
+/* Забезпечуємо видимість для нашого тексту */
+.animation-target {
+  visibility: visible;
+}
+
+/* Створюємо анімацію написання */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blinking-cursor {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.blinking-text::after {
+  content: "|";
+  display: inline-block;
+  animation: blinking-cursor 0.7s infinite;
 }
